updated social media links

--- a/consult.html
+++ b/consult.html
@@ -239,7 +239,8 @@
 
                 <!-- hero text -->
                 <section class="hero-heading">
-                    <h1>We serve as <span class="txt-thin mil-maroon">TRUSTED ADVISORS</span> for founders and growing brands</h1>
+                    <h1>We serve as <span class="txt-thin mil-maroon">TRUSTED ADVISORS</span> for founders and growing
+                        brands</h1>
                 </section>
                 <!-- hero text -->
                 <!-- Background Image -->
@@ -302,82 +303,85 @@
 
 
                 <!-- getintouch -->
-<!-- contact teaser-->
-<div class="contact-teaser">
-    <!-- content -->
-    <div class="mil-content">
-        <div id="swupMain" class="mil-main-transition">
+                <!-- contact teaser-->
+                <div class="contact-teaser">
+                    <!-- content -->
+                    <div class="mil-content">
+                        <div id="swupMain" class="mil-main-transition">
 
-            <!-- banner -->
+                            <!-- banner -->
 
-            <div class="mil-inner-banner ">
-                <div class="mil-banner-content mil-center mil-up">
-                    <div class="container">
-                        <h1 class="mil-mb-60 mil-maroon">Get in touch!</h1>
-                    </div>
-                </div>
-            </div>
+                            <div class="mil-inner-banner ">
+                                <div class="mil-banner-content mil-center mil-up">
+                                    <div class="container">
+                                        <h1 class="mil-mb-60 mil-maroon">Get in touch!</h1>
+                                    </div>
+                                </div>
+                            </div>
 
 
-            <section class="Form-teaser">
-            <div class="teaser-section">
-                <div class="left-side">
-                    <video class="video4" autoplay loop muted>
-                        <source src="img/content_hero/vid1.mov" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="right-side">
-                    <!-- <h2>Ready to Get Started?</h2> -->
-                    <h1 class="primary-heading" style="color: #972221; text-align: center;    font-weight: 100;
+                            <section class="Form-teaser">
+                                <div class="teaser-section">
+                                    <div class="left-side">
+                                        <video class="video4" autoplay loop muted>
+                                            <source src="img/content_hero/vid1.mov" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                    </div>
+                                    <div class="right-side">
+                                        <!-- <h2>Ready to Get Started?</h2> -->
+                                        <h1 class="primary-heading" style="color: #972221; text-align: center;    font-weight: 100;
                     word-spacing: 0px;">
-                        Start Cooking Your Next project
-                        <br>
-                        <span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
-                            US</span>
-                    </h1>
+                                            Start Cooking Your Next project
+                                            <br>
+                                            <span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
+                                                US</span>
+                                        </h1>
 
-                    <div class="center-btn">
-                        <a href="contact.html" class="schedule-button">Let's Schedule<i
-                                style="padding-left: 5px;"
-                                class="fa-solid fa-calendar-check"></i></a>
+                                        <div class="center-btn">
+                                            <a href="contact.html" class="schedule-button">Let's Schedule<i
+                                                    style="padding-left: 5px;"
+                                                    class="fa-solid fa-calendar-check"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+
+
+
+                        <footer class="footer8">
+                            <div class="container8">
+                                <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
+                                </div>
+                                <ul class="media-icons8">
+                                    <li><a
+                                            href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/foodonfocus/"><i
+                                                class="fab fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@zarakmedia/featured"><i
+                                                class="fab fa-youtube"></i></a></li>
+                                </ul>
+                                <div class="footer_adr">
+                                    Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
+                                    <br>
+                                    <div class="txt-thin mil-maroon"><i class="fa-solid fa-phone"></i> 971 4 587 4633
+                                        <br>
+                                        <i class="fa-solid fa-envelope-circle-check"></i>
+                                        info@foodonfocus.com
+                                    </div>
+                                </div>
+
+
+                            </div>
+                            <p id="copywright-p">All Rights Reserved | Copyright© foodonfocus.com 2024</p>
+                        </footer>
+
+
+
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
-
-
-
-    <footer class="footer8">
-        <div class="container8">
-            <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
-            </div>
-            <ul class="media-icons8">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-            </ul>
-            <div class="footer_adr">
-                Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
-                <br>
-                <div class="txt-thin mil-maroon"><i class="fa-solid fa-phone"></i> 971 4 587 4633
-                    <br>
-                    <i class="fa-solid fa-envelope-circle-check"></i>
-                    info@foodonfocus.com
-                </div>
-            </div>
-
-
-        </div>
-        <p id="copywright-p">All Rights Reserved | Copyright© foodonfocus.com 2024</p>
-    </footer>
-
-
-
-        </div>
-    </div>
 
                 <!-- hidden elements -->
                 <div class="mil-hidden-elements">
