--- a/contact.html
+++ b/contact.html
@@ -426,10 +426,13 @@
                         <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
                         </div>
                         <ul class="media-icons8">
-                            <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                            <li><a
+                                    href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                                        class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/foodonfocus/"><i
+                                        class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://www.youtube.com/@zarakmedia/featured"><i
+                                        class="fab fa-youtube"></i></a></li>
                         </ul>
                         <div class="footer_adr">
                             Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
