--- a/home-1.html
+++ b/home-1.html
@@ -1177,8 +1177,8 @@
                                 </div>
 
                                 <div class="featured-work-tags">
-                                    <span class="featured-work-tag">WEBSITE</span>
-                                    <span class="featured-work-tag">LOGO</span>
+                                    <span class="featured-work-tag">campaign photoshoots</span>
+                                    <span class="featured-work-tag">power vision</span>
                                 </div>
                             </div>
                             <div class="featured-work-box" id="feature-box-1">
@@ -1189,8 +1189,9 @@
                                     <h5 class="feature-work-name">Plantoholic</h5>
                                 </div>
                                 <div class="featured-work-tags">
-                                    <span class="featured-work-tag">WEBSITE</span>
-                                    <span class="featured-work-tag">LOGO</span>
+                                    <span class="featured-work-tag">branding</span>
+                                    <span class="featured-work-tag">social media</span>
+                                    <span class="featured-work-tag">360 degree Marketing</span>
                                 </div>
                             </div>
                             <!-- <div class="featured-work-box" id="feature-box-1">
@@ -1278,10 +1279,9 @@
                                         loading="lazy" alt="">
                                 </div>
                                 <ul class="media-icons8">
-                                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/foodonfocus/"><i class="fab fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@zarakmedia/featured"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                                 <div class="footer_adr">
                                     Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
