--- a/design.html
+++ b/design.html
@@ -416,6 +416,7 @@
                 </div>
 
                 <!-- 1product -->
+
                 <div>
                     <div class="project">
                         <div class="project-details">
@@ -426,7 +427,7 @@
                         </div>
                     </div>
                     <div class="but-mid">
-                        <button class="animated-button" onclick="window.location.href='#.'">
+                        <button class="animated-button" onclick="window.open('./pdfs/kimiri.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
@@ -441,7 +442,7 @@
                             </svg>
                         </button>
 
-                        <button class="animated-button" onclick="window.location.href='#.'">
+                        <button class="animated-button" onclick="window.open('./pdfs/kimiri.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
@@ -485,7 +486,7 @@
                         </div>
                     </div>
                     <div class="but-mid">
-                        <button class="animated-button" onclick="window.location.href='#.'">
+                        <button class="animated-button" onclick="window.open('./pdfs/brand-book', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
@@ -500,7 +501,7 @@
                             </svg>
                         </button>
 
-                        <button class="animated-button" onclick="window.location.href='#.'">
+                        <button class="animated-button" onclick="window.open('./pdfs/naturalz.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
@@ -544,7 +545,7 @@
                         </div>
                     </div>
                     <div class="but-mid">
-                        <button class="animated-button" onclick="window.location.href='#.'">
+                        <button class="animated-button" onclick="window.open('./pdfs/plantaholic.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
