1st set of changes in fof

--- a/content.html
+++ b/content.html
@@ -390,11 +390,11 @@
                     <div class="container5">
 
                         <div class="box5">
-                            <video src="video/vid3.mp4" muted></video>
+                            <video src="video/alpro3.mp4" muted></video>
                             <span style="color: #fbae19;">Video 1</span>
                         </div>
                         <div class="box5">
-                            <video src="video/vid_2.mp4" muted></video>
+                            <video src="video/yellowtailcli3.mp4" muted></video>
                             <span style="color: #fbae19;">Video 2</span>
                         </div>
                         <div class="box5">
@@ -402,7 +402,7 @@
                             <span style="color: #fbae19;">Video 3</span>
                         </div>
                         <div class="box5">
-                            <video src="video/vid_2.mp4" muted></video>
+                            <video src="video/wakame3.mp4" muted></video>
                             <span style="color: #fbae19;">Video 4</span>
                         </div>
                     </div>
