--- a/design.html
+++ b/design.html
@@ -423,7 +423,7 @@
                             <h3 class="hd-cor">Kimiri</h3>
                         </div>
                         <div class="image-container2">
-                            <img id="hoverable-img" src="img/projects/9.jpeg" alt="Project Image">
+                            <img id="hoverable-img" src="img/projects/kimiri.jpeg" alt="Project Image">
                         </div>
                     </div>
                     <div class="but-mid">
@@ -482,7 +482,7 @@
                             <h3 class="hd-cor">Naturalz</h3>
                         </div>
                         <div class="image-container2">
-                            <img id="hoverable-img" src="img/projects/4.jpeg" alt="Project Image">
+                            <img id="hoverable-img" src="img/projects/naturalz1.jpg" alt="Project Image">
                         </div>
                     </div>
                     <div class="but-mid">
@@ -541,7 +541,7 @@
                             <h3 class="hd-cor">Plantoholic</h3>
                         </div>
                         <div class="image-container2">
-                            <img id="hoverable-img" src="img/projects/2.jpeg" alt="Project Image">
+                            <img id="hoverable-img" src="img/projects/2.jpg" alt="Project Image">
                         </div>
                     </div>
                     <div class="but-mid">
