--- a/home-1.html
+++ b/home-1.html
@@ -667,10 +667,10 @@
                                                 <img src="img/team/1.jpeg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna
-                                                                Oldman</a>
+                                                        <h5 class="mil-muted mil-mb-5"><a
+                                                                href="home-2.html">LOGESHWARI</a>
                                                         </h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Art Director</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">FOUNDER</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i
                                                                         class="fab fa-behance"></i></a></li>
@@ -686,13 +686,13 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/team/2.jpeg" loading="lazy" alt="Team member">
+                                                <img src="img/team/6.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar
-                                                                Freeman</a>
+                                                        <h5 class="mil-muted mil-mb-5"><a
+                                                                href="home-2.html">SHASHANK</a>
                                                         </h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Frontend Dev</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">FOUNDER</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i
                                                                         class="fab fa-behance"></i></a></li>
@@ -715,13 +715,13 @@
                                             </p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/team/3.jpeg" loading="lazy" alt="Team member">
+                                                <img src="img/team/8.jpg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma
-                                                                Newman</a>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">AJAY</a>
                                                         </h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">VIDEOGRAPHER &
+                                                            EDITOR</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i
                                                                         class="fab fa-behance"></i></a></li>
@@ -737,13 +737,12 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/team/4.jpeg" loading="lazy" alt="Team member">
+                                                <img src="img/team/7.png" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa
-                                                                Trueman</a>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">HESSAM</a>
                                                         </h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">UI/UX Designer</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">PHOTOGRAPHER</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i
                                                                         class="fab fa-behance"></i></a></li>
@@ -1279,9 +1278,13 @@
                                         loading="lazy" alt="">
                                 </div>
                                 <ul class="media-icons8">
-                                    <li><a href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/foodonfocus/"><i class="fab fa-linkedin"></i></a></li>
-                                    <li><a href="https://www.youtube.com/@zarakmedia/featured"><i class="fab fa-youtube"></i></a></li>
+                                    <li><a
+                                            href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/foodonfocus/"><i
+                                                class="fab fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@zarakmedia/featured"><i
+                                                class="fab fa-youtube"></i></a></li>
                                 </ul>
                                 <div class="footer_adr">
                                     Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
