updated consult video

--- a/consult.html
+++ b/consult.html
@@ -247,7 +247,7 @@
                 <!-- bg video playing -->
                 <div class="video-container">
                     <video id="video" autoplay loop muted>
-                        <source src="video/vid1.mp4" type="video/mp4">
+                        <source src="video/consult4.mp4" type="video/mp4">
                     </video>
                     <button id="play-pause-btn" class="play">&#10074;&#10074;</button>
                 </div>
@@ -283,7 +283,7 @@
                 <!-- Background Image -->
 
                 <!-- cousult buttons -->
-                <div class="consult-buttons-container">
+                <!-- <div class="consult-buttons-container">
                     <div class="consult-buttons">
                         <span class="cc-txt-1">CONSULT</span>
                         <div class="cc-txt-box">
@@ -298,7 +298,7 @@
                             <img src="img/icons/right-arrow.svg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- cousult buttons -->
 
 
